--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,6 @@ updates:
       - "cristiancristea00"
     commit-message:
       prefix: "[pip]"
+    labels:
+      - "pip"
+      - "dependencies"
